font awsome icons added to navbar aligned correctly

--- a/app.css
+++ b/app.css
@@ -76,34 +76,34 @@ nav ul {
 }
 .nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   background: var(--main-yellow);   
-  z-index: 10;
+  /* z-index: 10; */
 } 
-.nav-list-l {
-  display: flex; 
-  margin-right: 75rem;
-}
-
-.nav-list-r {
+#nav-list-l {
   display: flex; 
   margin-right: 2rem;
 }
-.nav-list-r a, .nav-list-l a {    
+
+#nav-list-r {
+  display: flex; 
+  margin-right: 2rem;
+}
+#nav-list-r a, #nav-list-l a {    
   display: block;
   font-size: 2.2rem;
   padding: 2rem;      /* 2rem means "2x the browser's font size" */
 }   
-.nav-list-r a:hover {
+#nav-list-r a:hover {
   background: var(--main-green);
 } 
 /* NAV BAR FOR MOBILE */
 @media screen and (max-width: 600px) {
-  .nav-list-r a {    
+  #nav-list-r a {    
     display: block;
     font-size: 15px;
     padding: 1rem;
